# TIMP-project

./: AuthManager.cpp  AuthManager.h  CMakeLists.txt  Dockerfile  MainCalc.cpp  MathFunction.cpp  NSpart.pro  README.md  Test_users.sql  TiMP.pro  avtorizwindow.cpp  avtorizwindow.h  avtorizwindow.ui  config.ini  docker-compose.yml  main.cpp  regiswindow.cpp  regiswindow.h  regiswindow.ui  restmail.cpp  restmail.h  restmail.ui  setup_db.sh  test_all.py
Docs/html/: AuthManagerDocs_8cpp.html  AuthManagerDocs_8cpp__incl.map  AuthManagerDocs_8cpp__incl.md5  AuthManagerDocs_8cpp_source.html  AuthManagerDocs_8h.html  AuthManagerDocs_8h.js  AuthManagerDocs_8h__incl.map  AuthManagerDocs_8h__incl.md5  AuthManagerDocs_8h_source.html  AuthManager_8cpp__incl.map  AuthManager_8cpp__incl.md5  AuthManager_8cpp_source.html  AuthManager_8h__dep__incl.md5  AuthManager_8h__incl.map  AuthManager_8h_source.html  CalcDocs_8cpp.html  CalcDocs_8cpp__incl.map  CalcDocs_8cpp__incl.md5  CalcDocs_8h.html  CalcDocs_8h.js  CalcDocs_8h__incl.md5  CalcDocs_8h_a2c81dc0fc5a34950a24878abebe0a518_icgraph.map  CalcDocs_8h_source.html  MainDocs_8cpp__incl.map  MainDocs_8cpp__incl.md5  ServerDocs_8cpp.html  ServerDocs_8cpp__incl.map  ServerDocs_8cpp__incl.md5  ServerDocs_8cpp_source.html  ServerDocs_8h.js  ServerDocs_8h_source.html  _formulas_dark.tex  annotated.html  annotated_dup.js  classAuthManager-members.html  classAuthManager.html  classAuthManager.js  classAuthManager__coll__graph.map  classAuthManager__coll__graph.md5  classAuthManager__inherit__graph.md5  (+65 more)
Docs/latex/: AuthManagerDocs_8cpp.tex  AuthManagerDocs_8cpp__incl.md5  AuthManagerDocs_8cpp_source.tex  AuthManagerDocs_8h.tex  AuthManagerDocs_8h__incl.md5  AuthManagerDocs_8h_source.tex  AuthManager_8cpp__incl.md5  AuthManager_8h.tex  AuthManager_8h__incl.md5  CalcDocs_8cpp.tex  CalcDocs_8cpp__incl.md5  CalcDocs_8cpp_a1ec60e354c0c14fe35b2e385b36d747b_icgraph.md5  CalcDocs_8cpp_source.tex  CalcDocs_8h.tex  CalcDocs_8h__incl.md5  CalcDocs_8h_source.tex  ServerDocs_8cpp__incl.md5  ServerDocs_8cpp_source.tex  ServerDocs_8h.tex  ServerDocs_8h__incl.md5  ServerDocs_8h_source.tex  annotated.tex  classAuthManager.tex  classAuthManager__coll__graph.md5  classAuthManager__inherit__graph.md5  classAuthManager_a000d618f8dbff5c2465629f7ebadf10f_cgraph.md5  classAuthManager_a1e440167cb3e4edf550e786853e483ea_cgraph.md5  classAuthManager_a28d569d5c47d91b4a87465d26aa95067_cgraph.md5  classServer.tex  (+22 more)
client/: avtorisation.cpp  avtorisation.h  avtorisation.ui  client.cpp  client.h  client.pro  codereset.cpp  codereset.h  codereset.ui  fstr.cpp  fstr.h  fstr.ui  graph.cpp  graph.h  graph.ui  inpnwpass.cpp  inpnwpass.h  inpnwpass.ui  main.cpp  ncrct.cpp  ncrct.h  ncrct.ui  net.cpp  net.h  no_format_input.cpp  no_format_input.h  no_format_input.ui  pdtmail.cpp  pdtmail.h  pdtmail.ui  registration.cpp  registration.h  registration.ui  resmail.cpp  resmail.h  resmail.ui  sstr.cpp  sstr.h  sstr.ui  task.cpp  (+13 more)
docs/: index.html
src/: AuthManager.cpp  AuthManager.h  Server.cpp  Server.h  calc.cpp  calc.h  main.cpp
tests/: fuzz_server.cpp  test_calc.cpp
(+396 files in other folders)
